--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
             </div>
             
             <div class="imgskill">
+                <img src="img/js.png" alt="">
+                <h2>JavaScript</h2>
+            </div>
+
+            <div class="imgskill">
                 <img src="img/C.png" alt="">
                 <h2>C</h2>
             </div>
