--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
         
         <div id="cards">
             <div class="card">
-                <h3>Em breve</h3>
+                <h3>Calculadora IMC</h3>
                 <div id="imgproject">
-                    <img src="#" alt="">
+                    <img src="img/projeto1.jpg" alt="">
                 </div>
-                <p>Projeto em Desenvolvimento.</p>
+                <p>Projeto simples desenvolvido com HTML, CSS e JavaScript.</p>
 
             </div>
 
