--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
         <div id="cards">
             <div class="card">
                 <h3>Calculadora IMC</h3>
-                <div id="imgproject">
+                <a href="https://matheusmarquex.github.io/CalculadoraIMC/" target="_blank"><div id="imgproject">
                     <img src="img/projeto1.jpg" alt="">
                 </div>
-                <p>Projeto simples desenvolvido com HTML, CSS e JavaScript.</p>
+                <p>Projeto simples desenvolvido com HTML, CSS e JavaScript.</p></a>
 
             </div>
 
