--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
             </div>
 
             <div class="card">
-                <h3>Em breve</h3>
-                <div id="imgproject">
-                    <img src="#" alt="">
+                <h3>Bloco de Notas</h3>
+                <a href="https://github.com/matheusmarquex/Notepad" target="_blank"><div id="imgproject">
+                    <img src="img/projeto2.jpg" alt="">
                 </div>
-                <p>Projeto em Desenvolvimento.</p>
+                <p>Bloco de Notas Básico criado com C# Windows Form</p></a>
 
             </div>
 
