--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
         <div class="titulosh2div">
             <h2>SOBRE MIM</h2>
         </div>
-        <p>Meu nome é <strong>Matheus</strong>, tenho 21 anos, moro em Jundiaí-SP e estudo tecnologia desde 2017.<br> Em
+        <p>Meu nome é <strong>Matheus</strong>, tenho 22 anos, moro em Jundiaí-SP e estudo tecnologia desde 2017.<br> Em
             2018 estagiei na área de suporte técnico, onde adquiri conhecimento em manutenção de computadores,
-            instalação de sistemas e suporte à empresa. <br> Atualmente estou cursando Análise e Desenvolvimento de
+            instalação de sistemas e suporte à empresa. <br> Atualmente estou no segundo semestre de Análise e Desenvolvimento de
             Sistemas na Universidade Paulista (UNIP). Também tenho estudado por conta novas tecnologias, através de
             cursos, livros e documentações na internet. <br>Desde então, venho dedicando boa parte do meu dia ao
             aprendizado de Desenvolvimento Web. </p>
             <p>
-                Infelizmente ainda não possuo experiência profissional na área de desenvolvimento, entretanto, aqui neste portifólio você encontrará alguns projetos simples que venho desenvolvendo através de meus estudos.
+               Aqui neste portifólio você encontrará alguns projetos simples que venho desenvolvendo através de meus estudos.
 
             </p>
 
@@ -88,6 +88,17 @@
                 <img src="img/C.png" alt="">
                 <h2>C</h2>
             </div>
+
+            <div class="imgskill">
+                <img src="img/CSHARP.png" alt="">
+                <h2>C#</h2>
+            </div>
+            
+            <div class="imgskill">
+                <img src="img/git.png" alt="">
+                <h2>Git</h2>
+            </div>
+
         </div>
         
     </section>
